# genai-factory

./: .gitignore  .pre-commit-config.yaml  .yamllint  CONTRIBUTING.md  GEMINI.md  README.md  pyproject.toml  variables.tf
.github/workflows/: copyright-year-updater.yml  linting.yml  tests-integration.yml  tests-new.yml  tests-push.yml  tests.yml
agent-engine/: README.md
agent-engine/0-prereqs/: README.md  main.tf  networking.tf  outputs.tf  variables.tf
agent-engine/0-projects/: README.md  main.tf
agent-engine/1-apps/: README.md  main.tf  network.tf  outputs.tf  variables-fast.tf  variables.tf
ai-apps-conversational/0-projects/: README.md  main.tf
ai-apps-conversational/1-apps/: README.md  main.tf  outputs.tf  pyproject.toml  variables.tf
ai-apps-conversational/1-apps/data/ds-faq/: faq.csv
ai-apps-conversational/1-apps/tools/: agentutil.py  build-and-upload-agent.sh  pull-agent.sh
ai-apps-search/: README.md
ai-apps-search/0-prereqs/: README.md  main.tf  outputs.tf  variables.tf
ai-apps-search/0-projects/: README.md  main.tf  variables.tf
ai-apps-search/1-apps/: README.md  main.tf  outputs.tf  variables.tf
ai-pipeline/: README.md
ai-pipeline/0-projects/: README.md  main.tf
ai-pipeline/1-apps/: README.md  database.tf  main.tf  network.tf  outputs.tf  pipeline.yaml  simple_pipeline.yaml  variables.tf
cloud-run-gpu/: README.md
cloud-run-gpu/1-apps/: README.md  main.tf  outputs.tf  variables.tf
cloud-run-nl2sql-bq/: README.md
cloud-run-nl2sql-bq/0-prereqs/: README.md  main.tf  outputs.tf
cloud-run-nl2sql-bq/0-projects/: README.md  main.tf
cloud-run-nl2sql-bq/1-apps/: README.md  database.tf  frontend.tf  lb-ext.tf  lb-int-cert.tf  lb-int.tf  main.tf  network.tf  outputs.tf  variables.tf
cloud-run-nl2sql-bq/1-apps/apps/nl2sql/frontend/: .gcloudignore  Dockerfile  README.md  main.py  pyproject.toml
cloud-run-nl2sql-bq/1-apps/apps/nl2sql/frontend/src/: config.py
cloud-run-nl2sql-bq/1-apps/apps/nl2sql/frontend/src/agents/bigquery_agent/: agent.py  prompts.py  utils.py
cloud-run-rag/: README.md
cloud-run-rag-alloydb/: README.md
cloud-run-rag-alloydb/0-prereqs/: README.md  main.tf
cloud-run-rag-alloydb/0-projects/: README.md  main.tf
cloud-run-rag-alloydb/1-apps/: README.md  database.tf  frontend.tf  ingestion.tf  lb-ext.tf  lb-int-cert.tf  lb-int.tf  main.tf  network.tf  outputs.tf  variables.tf
cloud-run-rag-cloudsql/: README.md
cloud-run-rag-cloudsql/0-prereqs/: README.md
cloud-run-rag-cloudsql/0-projects/: README.md  main.tf
cloud-run-rag-cloudsql/1-apps/: README.md  database.tf  frontend.tf  ingestion.tf  lb-ext.tf  lb-int-cert.tf  lb-int.tf  main.tf  network.tf  outputs.tf  variables.tf
cloud-run-rag-search/: README.md
cloud-run-rag-search/0-prereqs/: README.md  main.tf  networking.tf  terraform.tfvars.sample
cloud-run-rag-search/0-projects/: README.md  main.tf
cloud-run-rag-search/1-apps/: README.md  database.tf  frontend.tf  ingestion.tf  lb-ext.tf  lb-int-cert.tf  lb-int.tf  network.tf  outputs.tf  terraform.tfvars.sample  variables.tf
cloud-run-rag/0-projects/: README.md  main.tf
cloud-run-rag/1-apps/: README.md  database.tf  frontend.tf  ingestion.tf  lb-ext.tf  lb-int-cert.tf  lb-int.tf  network.tf  outputs.tf
cloud-run-rag/1-apps/apps/rag/frontend/: Dockerfile  main.py  pyproject.toml  requirements.txt
cloud-run-rag/1-apps/apps/rag/frontend/src/: config.py  db.py
cloud-run-single/: README.md  cas.tf  loadbalancer.tf  main.tf  network.tf  outputs.tf  variables.tf
cloud-run-single/0-prereqs/: README.md  host.tf  main.tf  networking.tf  outputs.tf  service.tf  variables.tf
cloud-run-single/0-projects/: README.md  main.tf  variables.tf
cloud-run-single/1-apps/apps/firewall-mcp/: Dockerfile  README.md  client.py  pyproject.toml  server.py
cloud-run-single/1-apps/apps/mcp-server/: Dockerfile  README.md  client.py  pyproject.toml  server.py
conversational-agents/: .gitignore
conversational-agents/1-agent/: README.md  env.tfvars.template  locals.tf  main.tf  outputs.tf  provider.tf  pyproject.toml  variables.tf
conversational-agents/1-agent/scripts/: agentutil.py  build_and_upload_agent.sh  pull_agent.sh
conversational-gecx-as/: README.md
conversational-gecx-as/1-apps/: README.md  deploy_agent.sh  main.tf  outputs.tf  pyproject.toml  variables.tf
conversational-gecx-as/1-apps/apps/default/: app.json  environment.json
conversational-gecx-as/1-apps/apps/default/agents/root_agent/before_agent_callbacks/before_agent_callbacks_01/: python_code.py
conversational-gecx-as/1-apps/apps/default/tools/kb_data_store/: kb_data_store.json
conversational-gecx-as/1-apps/apps/default/tools/kb_data_store_search/: kb_data_store_search.json
conversational-gecx-as/1-apps/apps/default/tools/kb_data_store_search/python_function/: python_code.py
conversational-gecx-as/1-apps/data/knowledge-base/: tambourine-rates-and-plans.md
conversational-gecx-as/1-apps/scripts/agentutil/agentutil/: gcp_util.py
conversational-gecx-as/1-apps/tools/: deploy_agent.sh
conversational-gecx-as/1-apps/tools/agentutil/agentutil/: __init__.py  gcp_util.py  main.py
conversational-gecx-as/1-apps/tools/agentutil/agentutil/ces/: agent.py
conversational-gecx-as/1-apps/tools/agentutil/agentutil/document_processing/: data_store.py
gecx-agent-studio/: README.md
gecx-agent-studio/1-apps/scripts/: agentutil.py  deploy_agent.sh  pyproject.toml
gecx-agent-studio/1-apps/scripts/agentutil/: pyproject.toml
gecx-agent-studio/1-apps/scripts/agentutil/agentutil/: __init__.py  gcp_util.py  main.py
gecx-agent-studio/1-apps/scripts/agentutil/agentutil/ces/: agent.py
gecx-agent-studio/1-apps/scripts/agentutil/agentutil/document_processing/: data_store.py
gecx-dialogflow/: README.md
gecx-dialogflow/1-apps/scripts/agentutil/: README.md  agentutil.py  pyproject.toml
tests/: collectors.py  conftest.py  fixtures.py  utils.py
tests/examples/: variables.tf
tools/: check_boilerplate.py  check_documentation.py  check_links.py  fetch_latest_tag.py  linting.yml  plan_summary.py  tfdoc.py  update_copyright.py  update_fabric_ref.py
(+363 files in other folders)
