[project]
name = "conversational-agents"
version = "0.1.0"
description = "Tools to deploy and maintain Conversational Agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agentutil",
]

[tool.uv.sources]
agentutil = { path = "./tools/agentutil", editable = true }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tools"]
